--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,7 +28,8 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
-file.reference.activemq-all-5.13.3.jar=C:\\Users\\EQ\\Downloads\\apache-activemq-5.13.3\\activemq-all-5.13.3.jar
+file.reference.activemq-all-5.13.3.jar=activemq-all-5.13.3.jar
+file.reference.gson-2.7.jar=gson-2.7.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -43,8 +44,9 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
-    ${libs.Gson 2.7.classpath}:\
-    ${file.reference.activemq-all-5.13.3.jar}
+    ${file.reference.activemq-all-5.13.3.jar}:\
+    ${file.reference.gson-2.7.jar}:\
+    ${libs.MySQLDriver.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
